--- a/osa8/library-backend/package.json
+++ b/osa8/library-backend/package.json
@@ -11,6 +11,12 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^2.9.15",
-    "graphql": "^14.5.8"
+    "graphql": "^14.5.8",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.4"
+  },
+  "devDependencies": {
+    "cross-env": "^6.0.3",
+    "nodemon": "^2.0.2"
   }
 }
