--- a/osa7/bloglist_frontend/package.json
+++ b/osa7/bloglist_frontend/package.json
@@ -19,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,6 +33,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "cypress": "^3.8.1",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.2.0",
     "jest-dom": "^4.0.0",
